# ModelWeaver

./: .dockerignore  .env.committed  .env.template  .gitignore  ARCHITECTURE_MODULES.md  CARNET.md  Dockerfile.bare  Dockerfile.test  LICENSE  ModelWeaver.md  VERSIONS.md  analyse-mistral.md  analyse_laguna.md  build-docker.sh  clean.sh  cleanup_manifest.json  gemma-analyse.md  gemma-versionning.md  heavy_blobs.txt  install_in_docker.py  integration_test.py  integration_test_docker.py  maj-liste-litellm.py  manifest.json  mistral-analyse.md  mistral-approfondissement.md  mistral-versionning.md  modelweaver.md  modelweaver.py  modelweaver.sh  modelweaver_proxy.py  opencode.json  ordonner-fallback.py  prepare_keys.py  programming_rules.md  requirements.txt  run_ui.py  special-gemma-roadmap.txt  temp_metrics.db-shm  temp_metrics.db-wal  (+10 more)
.modelweaver/: fallback_preferences.yaml  litellm_router_proxy.py  opencode-wrapper.sh
AgentFrameWork/: __init__.py  __main__.py  agent_storage.py  dispatcher.py  dsl_executor.py  factory.py  fsm_interpreter.py  pipeline_executor.py  provisioning.py  router.py  scheduler.py  stream_bus.py  ticker.py  tool_executor.py  watcher_service.py  worker.py
AgentsCatalogue/: role_manager.py  role_pipeline_spec.role.yaml
agents/: __init__.py  __main__.py  auto_debug_service.py  dispatcher.py  dsl_executor.py  factory.py  pipeline_executor.py  provisioning.py  review_service.py  role_manager.py  ticker.py  tool_executor.py  watchdog_service.py  worker.py
docs/: AGENT_SPEC.md  AGENT_SPEC_COMPLET.md  ARCHITECTURE_API.md  ARCHITECTURE_MODULES.md  CARNET.md  RESTORE_GUI.md  VERSIONS.md  double_extension.md  todo_format.md  workflow_yaml_spec.md
gui/installer/src-tauri/: Cargo.toml  tauri.conf.json
gui/installer/src-tauri/src/: main.rs
hardcheck/: verify.py
install_recipe/: curl.mw.yaml  index.mw.json  ollama.mw.yaml  (+3 more)
oldcode/gui-first-try/src-tauri/: Cargo.toml  tauri.conf.json
oldcode/gui-first-try/src-tauri/src/: main.rs
projetadmin/gui-bootstrap/src-tauri/: Cargo.toml  tauri.conf.json
projetadmin/gui-bootstrap/src-tauri/src/: bootstrap-version.txt  main.rs
projetadmin/gui-main/src-tauri/: Cargo.toml  tauri.conf.json
projetadmin/gui-main/src-tauri/src/: main.rs
projetadmin/main-cli/: Cargo.toml
projetadmin/main-cli/src/: main.rs
(+787 files in other folders)
