[package]
name = "modelweaver-cli"
version = "0.6.0"
description = "ModelWeaver headless CLI (service runner)"
authors = ["ModelWeaver Team"]
edition = "2021"

[[bin]]
name = "modelweaver-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
