[package]
name = "modelweaver-installer"
version = "0.1.0"
description = "ModelWeaver Installer GUI"
authors = ["Pierreloup"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
