[package]
name = "modelweaver-gui-tauri"
version = "0.1.0"
description = "Tauri backend for ModelWeaver GUI"
authors = ["ModelWeaver Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
