[package]
name = "modelweaver-bootstrap"
version = "0.5.20"
description = "ModelWeaver Bootstrap Installer"
authors = ["ModelWeaver Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
chrono = "0.4"
tauri = { version = "2.6.0", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
