[package]
name = "modelweaver"
version = "0.5.19"
description = "ModelWeaver Main App"
authors = ["ModelWeaver Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"

[features]
default = []
